2013-01-03  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpflow.cpp (main): opt_gzip_decompress renamed to gzip_decompress and implemented.

	* src/flow.cpp (flow::new_filename): now automatically makes subdirectories if necessary

2013-01-02  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/scan_http.cpp: zero-length attachments are no longer created on disk.

	* src/tcpip.cpp (tcpip::store_packet): zero-length flows are no longer created on disk.

2012-12-27  Simson Garfinkel  <simsong@Mucha.local>

	* renamed stored_flow as saved_flow becuase they are all stored, but only some are saved in the ring bufer.

	* src/tcpdemux.cpp (tcpdemux::close_all): renamed close_all_fd(). close_tcpip renamed close_tcpip_fd; close_oldest renamed close_oldest_fd()
	(tcpdemux::remove_all_flows): renamed.

2012-12-24  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpip.h (class flow): removed connection_count from flow identifier becuase it cannot be derrived from the flow. We really should have the LSN as part of the flow or something. The connection_count will be found when the filename is made.

2012-12-23  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpdemux.cpp (tcpdemux::process_tcp): option output_enabled changed to store_output

2012-12-22  Simson Garfinkel  <simsong@Mucha.local>

	* src/be13_api/sbuf.cpp (sbuf_t::map_file): 

	* src/scan_http.cpp (scan_http_cbo::on_headers_complete): changed retrying_open to open() to eliminate dependency on tcpdemux

	* src/tcpip.h: put in its own file

	* src/util.cpp (mmap): moved fake mmap() cover to util.cpp

	* src/tcpip.cpp (tcpip): no longer closes the file at the end of every tcpip and then re-opens it if there is post-processing. Now it re-uses the same fd.
	(tcpip): renamed opt_after_header to opt_post_processing

2012-12-18  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpflow.cpp (main): fixed opt_all; it was always true, but it shoudln't be.

2012-12-16  Simson Garfinkel  <simsong@Mucha.local>
