@@ -20,6 +20,13 @@ grenew:
 	automake --add-missing -c
 
 
+# For testing:
+pdft:	
+	(cd src;make tcpflow)
+	/bin/rm -rf out
+	src/tcpflow -a -o out -r /corp/nps/packets/2008-nitroba/nitroba.pcap -w out/extra.pcap
+	open out/report.pdf
+
 #
 # AFFLIB RELEASE SYSTEM V1.0 FOLLOWS
 #
